5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1613_1800.log
== TEST (2019-04-01 23:41:43) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
int(input(a**2+b**2+c**2//a+b+c))
print(round(x,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    int(input(a**2+b**2+c**2//a+b+c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:43:07) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
print(int(input(a**2+b**2+c**2//a+b+c)))
print(round(x,7))
-- EXECUTION TIME:
0.153909
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    print(int(input(a**2+b**2+c**2//a+b+c)))
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:44:42) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=a+b+c
print(round(x,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma_das_variaveis=a+b+c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:45:08) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=a+b+c
print(round(x,7))
-- EXECUTION TIME:
0.219846
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    soma_das_variaveis=a+b+c
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:50:23) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=int(input("Qual o valor da formula"))
formula=a**2+b**2+c**2//a+b+c
print(round(valor da formula,7))
-- ERROR:
File "XXXX", line 6
    print(round(valor da formula,7))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:51:01) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=int(input("Qual o valor da formula"))
formula=a**2+b**2+c**2//a+b+c
print(round(formula,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma_das_variaveis=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:51:43) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=int(input("Qual o valor da formula"))
formula=a**2+b**2+c**2//a+b+c
print(round(formula,7))
-- EXECUTION TIME:
0.15767
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    soma_das_variaveis=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:52:56) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=float(input("Qual o valor da formula"))
formula=a**2+b**2+c**2//a+b+c
print(round(formula,7))
-- EXECUTION TIME:
0.197298
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    soma_das_variaveis=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:53:31) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=float(input("Qual o valor da formula"))
formula=a**2+b**2+c**2//a+b+c
print(round(formula,7))
-- EXECUTION TIME:
0.144447
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    soma_das_variaveis=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:03:49) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=float(input("Qual o valor da formula"))
formula=a**2+b**2+c**2/(a+b+c)
print(round(formula,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma_das_variaveis=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:03:52) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=float(input("Qual o valor da formula"))
formula=a**2+b**2+c**2/(a+b+c)
print(round(formula,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma_das_variaveis=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:04:36) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=float(input("Qual o valor da formula"))
formula=((a**2)+(b**2)+(c**2)/(a+b+c)
print(round(formula,7))
-- ERROR:
File "XXXX", line 6
    print(round(formula,7))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:06:30) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=float(input("Qual o valor da formula"))
formula=((a**2)+(b**2)+(c**2)/(a+b+c)
real=input(formula,7)
print(real)			
-- ERROR:
File "XXXX", line 6
    real=input(formula,7)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:06:31) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=float(input("Qual o valor da formula"))
formula=((a**2)+(b**2)+(c**2)/(a+b+c)
real=input(formula,7)
print(real)			
-- EXECUTION TIME:
0.160302
-- ERROR:
  File "/home/codebench/codes/1613/1800/main.py", line 6
    real=input(formula,7)
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:06:34) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=float(input("Qual o valor da formula"))
formula=((a**2)+(b**2)+(c**2)/(a+b+c)
real=input(formula,7)
print(real)			
-- ERROR:
File "XXXX", line 6
    real=input(formula,7)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:13:14) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=float(input("Qual o valor da formula"))
formula=((a**2)+(b**2)+(c**2)/(a+b+c)
real=round(formula,7)
print(real)			
-- ERROR:
File "XXXX", line 6
    real=round(formula,7)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:13:42) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=float(input("Qual o valor da formula"))
formula=((a**2)+(b**2)+(c**2)/(a+b+c)
real=formula,7
print((round(real))			
-- ERROR:
File "XXXX", line 6
    real=formula,7
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:13:53) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=float(input("Qual o valor da formula"))
formula=((a**2)+(b**2)+(c**2)/(a+b+c)
print((round(real))			
-- ERROR:
File "XXXX", line 6
    print((round(real))			
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:14:48) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=float(input("Qual o valor da formula"))
formula=((a**2)+(b**2)+(c**2)/(a+b+c)
real=round(formula, 7)
print=(real)
-- ERROR:
File "XXXX", line 6
    real=round(formula, 7)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:15:08) 
-- CODE:
var=input("variavel a:")
var=input("variavel b:")
var=input("variavel c:")
soma_das_variaveis=float(input("Qual o valor da formula"))
formula=float((a**2)+(b**2)+(c**2)/(a+b+c)
real=round(formula, 7)
print=(real)
-- ERROR:
File "XXXX", line 6
    real=round(formula, 7)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:16:22) 
-- CODE:
a=input("variavel a:")
b=input("variavel b:")
c=input("variavel c:")
formula=((a**2)+(b**2)+(c**2)/(a+b+c)
real=round(formula, 7)
print=(real)
-- ERROR:
File "XXXX", line 5
    real=round(formula, 7)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:16:35) 
-- CODE:
a=input("variavel a:")
b=input("variavel b:")
c=input("variavel c:")
formula=(a**2)+(b**2)+(c**2)/(a+b+c)
real=round(formula, 7)
print=(real)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula=(a**2)+(b**2)+(c**2)/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:17:29) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
formula=(a**2)+(b**2)+(c**2)/(a+b+c)
real=round(formula, 7)
print=(real)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula=(a**2)+(b**2)+(c**2)/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:17:39) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
formula=(a**2)+(b**2)+(c**2)/(a+b+c)
real=round(formula, 7)
print=(real)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula=(a**2)+(b**2)+(c**2)/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:17:41) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
formula=(a**2)+(b**2)+(c**2)/(a+b+c)
real=round(formula, 7)
print=(real)
-- EXECUTION TIME:
0.152399
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:

-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:17:46) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
formula=(a**2)+(b**2)+(c**2)/(a+b+c)
real=round(formula, 7)
print=(real)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula=(a**2)+(b**2)+(c**2)/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:18:18) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
formula=float((a**2)+(b**2)+(c**2)/(a+b+c))
real=round(formula, 7)
print=(real)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    formula=(a**2)+(b**2)+(c**2)/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:18:26) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
formula=float((a**2)+(b**2)+(c**2)/(a+b+c))
real=round(formula, 7)
print=(real)
-- EXECUTION TIME:
0.230651
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:

-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:19:15) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
formula=float((a**2)+(b**2)+(c**2)/(a+b+c))
real=round(formula, 7)
print(real)
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:19:35) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
formula=float(((a**2)+(b**2)+(c**2))/(a+b+c))
real=round(formula, 7)
print(real)
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:19:42) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
formula=float(((a**2)+(b**2)+(c**2))/(a+b+c))
real=round(formula, 7)
print(real)
-- EXECUTION TIME:
0.136769
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
